Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,6 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem, quo? Rem, vel. Atque, sunt facilis. Suscipit fuga dolor veniam est non. Esse, nobis deleniti ea reiciendis iusto dicta consequatur totam.</p>
-    
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab totam nemo, natus dolores delectus quas repellendus assumenda qui, laborum non doloribus cum odit consequuntur reprehenderit, aliquid et earum temporibus vel.</p>
 </body>
 </html>
